Update Searchgworkhistory -close #385
