# backend/controllers/office_controller.go
@@ -10,8 +10,8 @@ import (
 	"github.com/team09/app/ent"
 	"github.com/team09/app/ent/department"
 	"github.com/team09/app/ent/doctor"
-	"github.com/team09/app/ent/office"
 	"github.com/team09/app/ent/extradoctor"
+	"github.com/team09/app/ent/office"
 )
 
 // OfficeController defines the struct for the office controller
@@ -21,14 +21,14 @@ type OfficeController struct {
 }
 
 type Office struct {
-	Officename  	string
-	Added1			string
-	Added2 			string
-	Doctor      	int
-	Department  	int
-	Extradoctor  	int
-	Roomnumber		string
-	Doctoridcard    string
+	Officename   string
+	firsttime    string
+	finallytime  string
+	Doctor       int
+	Department   int
+	Extradoctor  int
+	Roomnumber   string
+	Doctoridcard string
 }
 
 // CreateOffice handles POST requests for adding office entities
@@ -87,29 +87,29 @@ func (ctl *OfficeController) CreateOffice(c *gin.Context) {
 		return
 	}
 
-	time1, err := time.Parse(time.RFC3339, obj.Added1+"T00:00:00Z")
-	time2, err := time.Parse(time.RFC3339, obj.Added2+"T00:00:00Z")
+	firsttime, err := time.Parse(time.RFC3339, obj.firsttime+"T00:00:00Z")
+	finallytime, err := time.Parse(time.RFC3339, obj.finallytime+"T00:00:00Z")
 	of, err := ctl.client.Office.
 		Create().
 		SetOfficename(obj.Officename).
 		SetDoctoridcard(obj.Doctoridcard).
 		SetRoomnumber(obj.Roomnumber).
 		SetDoctor(d).
-		SetDepartment(de). 
+		SetDepartment(de).
 		SetExtradoctor(et).
-		SetAddedTime1(time1).
-		SetAddedTime2(time2).
+		SetFirsttime(firsttime).
+		SetFinallytime(finallytime).
 		Save(context.Background())
 
 	if err != nil {
 		fmt.Println(err)
 		c.JSON(400, gin.H{
 			"status": false,
-			"error" : err,
+			"error":  err,
 		})
 		return
 	}
-	
+
 	c.JSON(200, gin.H{
 		"status": true,
 		"data":   of,
@@ -137,6 +137,9 @@ func (ctl *OfficeController) GetOffice(c *gin.Context) {
 	}
 	of, err := ctl.client.Office.
 		Query().
+		WithDepartment().
+		WithDoctor().
+		WithExtradoctor().
 		Where(office.IDEQ(int(id))).
 		Only(context.Background())
 	if err != nil {
@@ -146,6 +149,38 @@ func (ctl *OfficeController) GetOffice(c *gin.Context) {
 		return
 	}
 	c.JSON(200, of)
+}
+
+// GetSearchWorkhistory handles GET requests to retrieve a Office entity
+// @Summary Get a Office entity by Search
+// @Description get Office by Search
+// @ID get-Office-by-search
+// @Produce  json
+// @Param Office query string false "Search Office"
+// @Success 200 {object} ent.Office
+// @Failure 400 {object} gin.H
+// @Failure 404 {object} gin.H
+// @Failure 500 {object} gin.H
+// @Router /searchworkhistorys [get]
+func (ctl *OfficeController) GetSearchWorkhistory(c *gin.Context) {
+	officesearch := c.Query("office")
+
+	of, err := ctl.client.Office.
+		Query().
+		WithDoctor().
+		WithDepartment().
+		WithExtradoctor().
+		Where(office.DoctoridcardContains(officesearch)).
+		All(context.Background())
+	if err != nil {
+		c.JSON(404, gin.H{
+			"error": err.Error(),
+		})
+		return
+	}
+	c.JSON(200, gin.H{
+		"data": of,
+	})
 }
 
 // ListOffice handles request to get a list of office entities
@@ -196,37 +231,6 @@ func (ctl *OfficeController) ListOffice(c *gin.Context) {
 	c.JSON(200, offices)
 }
 
-// DeleteOffice handles DELETE requests to delete a office entity
-// @Summary Delete a office entity by ID
-// @Description get office by ID
-// @ID delete-office
-// @Produce  json
-// @Param id path int true "Office ID"
-// @Success 200 {object} gin.H
-// @Failure 400 {object} gin.H
-// @Failure 404 {object} gin.H
-// @Failure 500 {object} gin.H
-// @Router /offices/{id} [delete]
-func (ctl *OfficeController) DeleteOffice(c *gin.Context) {
-	id, err := strconv.ParseInt(c.Param("id"), 10, 64)
-	if err != nil {
-		c.JSON(400, gin.H{
-			"error": err.Error(),
-		})
-		return
-	}
-	err = ctl.client.Office.
-		DeleteOneID(int(id)).
-		Exec(context.Background())
-	if err != nil {
-		c.JSON(404, gin.H{
-			"error": err.Error(),
-		})
-		return
-	}
-	c.JSON(200, gin.H{"result": fmt.Sprintf("ok deleted %v", id)})
-}
-
 // NewOfficeController creates and registers handles for the office controller
 func NewOfficeController(router gin.IRouter, client *ent.Client) *OfficeController {
 	ofc := &OfficeController{
@@ -241,8 +245,11 @@ func NewOfficeController(router gin.IRouter, client *ent.Client) *OfficeControll
 func (ctl *OfficeController) register() {
 	offices := ctl.router.Group("/offices")
 	offices.GET("", ctl.ListOffice)
+	// Search
+	searchworkhistory := ctl.router.Group("/searchworkhistorys")
+	searchworkhistory.GET("", ctl.GetSearchWorkhistory)
 	// CRUD
 	offices.POST("", ctl.CreateOffice)
 	offices.GET(":id", ctl.GetOffice)
-	offices.DELETE(":id", ctl.DeleteOffice)
+
 }
