# backend/ent/migrate/schema.go
@@ -193,8 +193,8 @@ var (
 		{Name: "officename", Type: field.TypeString},
 		{Name: "roomnumber", Type: field.TypeString},
 		{Name: "doctoridcard", Type: field.TypeString, Size: 10},
-		{Name: "added_time1", Type: field.TypeTime},
-		{Name: "added_time2", Type: field.TypeTime},
+		{Name: "firsttime", Type: field.TypeTime},
+		{Name: "finallytime", Type: field.TypeTime},
 		{Name: "department_id", Type: field.TypeInt, Nullable: true},
 		{Name: "doctor_id", Type: field.TypeInt, Nullable: true},
 		{Name: "extradoctor_id", Type: field.TypeInt, Nullable: true},
